kubernetes/apps/default/bighorn-byte-browser/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bighorn-byte-browser
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: bighorn-byte-browser
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: default
            app.kubernetes.io/name: bighorn-byte-outreach
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  ingressDeny:
    - fromEntities: [host, remote-node, kube-apiserver]
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 0.0.0.0/8
            - 10.0.0.0/8
            - 100.64.0.0/10
            - 127.0.0.0/8
            - 169.254.0.0/16
            - 172.16.0.0/12
            - 192.0.0.0/24
            - 192.0.2.0/24
            - 192.88.99.0/24
            - 192.168.0.0/16
            - 198.18.0.0/15
            - 198.51.100.0/24
            - 203.0.113.0/24
            - 224.0.0.0/4
            - 240.0.0.0/4
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
  egressDeny:
    - toEntities: [host, remote-node, kube-apiserver]
